welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:9: error: Boolean does not take parameters
  return vert()
             ^