welcome.lessons.welcome.methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
  var vert: Boolean = false;
    avance()
    if (getCouleurSol() == Color.green) {
      vert = true }
     recule()
     droite()
  return vert()
  }
